2005-08-12  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version to 2.8.0

2005-08-11  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c: Work around some problems
	with the gnome-vfs backends which could lead to crashes
	in the bookmark handling.  (#310270, Diego Gonzalez, patch
	by Michael Meeks)

2005-08-11  Kristian Rietveld  <kris@gtk.org>

	Fix for #312924, by John Finlay.

	* gtk/gtkliststore.c (gtk_list_store_increment_stamp),
	(gtk_list_store_clear): increment stamp on store clearance.

	* gtk/gtktreestore.c (gtk_tree_store_increment_stamp),
	(gtk_tree_store_clear): ditto.

2005-08-11  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_size_allocate_columns): queue
	a draw for the entire widget if any column changes width. (Fixes
	#311026, reported by Frederic Crozat).

2005-08-10  J. Ali Harlow  <ali@juiblex.co.uk>

	* configure.in: Revert to linking against pangowin32 under win32
	platform (Owen Taylor).

2005-08-10  J. Ali Harlow  <ali@juiblex.co.uk>

	* gdk/win32/gdkfont-win32.c (gdk_font_from_description_for_display): Make
	the last change compile.

2005-08-10  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreemodelfilter.c (gtk_tree_model_filter_row_deleted) 
	(gtk_tree_model_filter_remove_node): Remove ambiguities pointed
	out by gcc.

2005-08-10  James Henstridge  <james@jamesh.id.au>

	* configure.in: fix definition of GDK_DEP_CFLAGS so that it
	doesn't cause build failures if $X_PACKAGES is not empty.

2005-08-09  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkwindow.c (gdk_window_ref_cairo_surface): Remove superfluous
	call to gdk_window_get_offsets (). (#313051, Bertram Felgenhauer)

2005-08-09  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Strip out all Xft, FreeType, and pangoxft checking.
	Rewrite X checks to use pkg-config as much as possible.

	* gdk/win32/gdkfont-win32.c (gdk_font_from_description_for_display): Make